frame/support/test/tests/construct_runtime_ui/invalid_module_details_keyword.stderr
error: expected `default` or identifier
 --> $DIR/invalid_module_details_keyword.rs:9:20
  |
9 |         system: System::{enum},
  |                          ^^^^
