frame/support/test/tests/construct_runtime_ui/invalid_module_details_keyword.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub struct Runtime
	{
		system: System::{enum},
	}
}

fn main() {}
